testsuite/tests/builtins/list_methods/any/non_function_predicate/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.any("Not a function"))
   │       ───────────┬───────────  
   │                  ╰───────────── Expecting a "Function" for the parameter "predicate", got a "Str"
───╯
